@@ -352,6 +352,7 @@ require-rubia-for-endgame-planets=Require clearing Rubia to unlock endgame plane
 rubia-difficulty-setting=Rubia planet difficulty
 rubia-rocketizer-early-unlock=Rocketizer early unlock
 invert-trashsteroid-scaling=Invert trashsteroid visual scaling
+rubia-megabase-mode=Megabase mode
 
 [mod-setting-description]
 disable-lyrical-music=Turns on accessibility mode for people with trash taste. Default off is the intended way to play the mod.
@@ -359,9 +360,9 @@ remove-rubia-from-promethium_sci=If set ON, then Rubia's science pack will NOT b
 require-rubia-for-endgame-planets=If set ON, then beating Rubia is necessary to unlock endgame planets such as Aquilo AND modded endgame planets such as Maraxsis. Default ON.
 
 rubia-difficulty-setting=Magnifies trashsteroid health, damage dealt by trashsteroids, and the amount of damage sustained upon Rubia planet entry. Resources and crafting are not affected. Default = Normal.\n[img=utility/warning_icon]WARNING: "Pyanodons" requires Fulgoran technology (not explicitly required by the tech tree) to even land on Rubia.\n[img=utility/warning_icon]WARNING: "Engineer Must Die" additionally requires [quality=epic] quality equipment to land on Rubia.
-;rubia-megabasing-density-mode=Bigger numbers makes trashsteroids spawn less frequently, but with denser HP 
 rubia-rocketizer-early-unlock=Unlock the rocketizer alongside rocket silos (as though Rubia was not installed). This setting is for backwards compatibility with save files that installed "Rocket Cargo Insertion" prior to downloading Rubia. Please do not enable unless this applies to you. Default OFF.
 invert-trashsteroid-scaling=Flip trashsteroid scaling to become smaller as they make impact (instead of larger). Purely visual. Default OFF.
+rubia-megabase-mode=Makes several things on Rubia lighter on UPS, but removes some mechanics and graphical improvements. This setting does nothing prior to beating Rubia, and does alter the difficulty. Default OFF.
 
 [string-mod-setting]
 rubia-difficulty-setting-easy=1) Micropenis
@@ -465,6 +466,8 @@ rubia-shield-warning-convo-part4=(Loup&Snoop): no no no. he'll turn back. just l
 rubia-trashsteroid-health-scaling=(Loup&Snoop / Rubia): So... don't be mad, but I fixed a bug that made trashsteroid health not scale as much as it needed when you got high physical damage technology... A totally understandable mistake! But on the bright side, I also added difficulty settings under Mod Settings => Map Settings. If your base starts suddenly exploding, you should use that. Good luck!
 rubia-craptonite-wall=(Loup&Snoop / Rubia): Good news! Craptonite walls were buffed in a recent update. See details in their technology, or in Tips and Tricks.
 rubia-craptonite-wall-recipe=(Loup&Snoop / Rubia): Notice: The recipe for craptonite walls has been changed, and the Rubia-specific recipe for refined concrete has been removed.
+
+rubia-tangible-projectile-mod-warning=(Loup&Snoop / Rubia): Warning. You are currently using a mod that makes bullets actual projectiles (distant misfire). This makes Rubia substantially more difficult than intended.
 
 [tips-and-tricks-item-name]
 rubia-briefing=Rubia briefing
